test/Debug/Errors/StupidCode.k.proof
 - (error) (StupidCode.k:1) undefined expression parser for '{... }'
 - (error) (StupidCode.k:1)  statement expects $expr
Q.E.D.
